--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -50,7 +50,7 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
   * fixed BUG #2994521 "mat.slice unable to cope with only empty BAT arguments"
     https://sourceforge.net/tracker/index.php?func=detail&aid=2994521&group_id=56967&atid=482468
-    by makeing MATpackSliceInternal() handle empty input BATs correctly
+    by making MATpackSliceInternal() handle empty input BATs correctly
 
  -- Stefan Manegold <manegold@cwi.nl>  Sat, 1 May 2010 10:58:37 +0200
 
@@ -63,7 +63,7 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
   * Made compilation of "testing" (and "java") independent of MonetDB.
-    This is mainy for Windows, but also on other systems, "testing" can now be
+    This is mainly for Windows, but also on other systems, "testing" can now be
     built independently of (and hence before) "MonetDB".
     Files that mimic configure functionality on Windows were moved from
     "MonetDB" to "buildtools"; hence, this affects all packages on Windows,
@@ -89,7 +89,7 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
     an optional hash '#', which produces line numbers for
     each of reference and analysis of variable span.
   * The dataflow scheduler has been revamped to allow for
-    more parellelism to be exploited.
+    more parallelism to be exploited.
   * The garbage collection administration has been changed. Every variable record
     now comes with an end-of-life field (eolife), which denotes the instruction whereafter
     the BAT variable reference counter can be decremented. The garbage collector is
@@ -97,7 +97,7 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
     pressing needs to retain them. This means that MAL functions defined and
     used in the context of SQL, and which are not inlined, may cause a leakage.
     The garbage collection has become part of each interpreter step.
-    The new approach makes the SQL/MAL plans half te size as before.
+    The new approach makes the SQL/MAL plans half the size as before.
 
  -- Martin Kersten <martin.kersten@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
