--- a/pathfinder/debian/changelog
+++ b/pathfinder/debian/changelog
@@ -31,7 +31,7 @@ monetdb-xquery (0.38.1-20100618) unstable; urgency=low
 monetdb-xquery (0.38.1-20100618) unstable; urgency=low
 
   * Made compilation of "testing" (and "java") independent of MonetDB.
-    This is mainy for Windows, but also on other systems, "testing" can now be
+    This is mainly for Windows, but also on other systems, "testing" can now be
     built independently of (and hence before) "MonetDB".
     Files that mimic configure functionality on Windows were moved from
     "MonetDB" to "buildtools"; hence, this affects all packages on Windows,
