--- a/MonetDB4/debian/changelog
+++ b/MonetDB4/debian/changelog
@@ -1,3 +1,9 @@
+monetdb4-server (4.38.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
+
 monetdb4-server (4.38.1-20100630) unstable; urgency=low
 
   * Rebuilt.
