--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -1,3 +1,27 @@
+monetdb5-server (5.20.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
+
+monetdb5-server (5.20.3-20100706) unstable; urgency=low
+
+-- - Return a correct URI for local connection from Sabaoth when the
+-- connection is a UNIX domain socket.  Partial fix for bug #2567.
+-- 
+ -- Fabian Groffen <fabian@cwi.nl>  Thr, 01 Jul 2010 14:06:18 +0200
+
+monetdb5-server (5.20.3-20100706) unstable; urgency=low
+
+-- - various performance fixes in grouping and grouped aggregation code
+-- (MonetDB5/src/modules/kernel/group.mx, MonetDB5/src/modules/kernel/aggr*.mx)
+-- to reduce the execution time the following query that mimics a two-column
+-- primary key check over the ~5 billion tuple "neighbors" table of the
+-- Skyserver database from 26 hours to 1.5 hours (on a 64 GB machine):
+-- SELECT count(c), sum(c), min(c), max(c) FROM (SELECT count(*) AS c FROM "neighbors" GROUP BY "objID","NeighborObjID") AS t;
+
+ -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Wed, 30 Jun 2010 14:06:18 +0200
+
 monetdb5-server (5.20.1-20100630) unstable; urgency=low
 
   * Rebuilt.
