--- a/pathfinder/debian/changelog
+++ b/pathfinder/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-xquery (0.38.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
+
 monetdb-xquery (0.38.1-20100630) unstable; urgency=low
 
   * Rebuilt.
