Preparations for building the Jun2010-SP1 release.
Moved contents of ChangeLog.Jun2010 to .spec file and debian/changelog.

--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -2,6 +2,12 @@ monetdb (1.38.3-20100706) unstable; urgency=low
 
   * Rebuilt.
 
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:53:45 +0200
+
+monetdb (1.38.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
  -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
 
 monetdb (1.38.1-20100630) unstable; urgency=low
