--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -2,6 +2,12 @@ monetdb5-server (5.20.3-20100706) unstable; urgency=low
 
   * Rebuilt.
 
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:53:45 +0200
+
+monetdb5-server (5.20.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
  -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
 
 monetdb5-server (5.20.3-20100706) unstable; urgency=low
