--- a/sql/debian/changelog
+++ b/sql/debian/changelog
@@ -2,6 +2,12 @@ monetdb-sql (2.38.3-20100706) unstable; urgency=low
 
   * Rebuilt.
 
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:53:45 +0200
+
+monetdb-sql (2.38.3-20100706) unstable; urgency=low
+
+  * Rebuilt.
+
  -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 06 Jul 2010 14:06:18 +0200
 
 monetdb-sql (2.38.3-20100706) unstable; urgency=low
