--- a/MonetDB4/debian/changelog
+++ b/MonetDB4/debian/changelog
@@ -1,3 +1,9 @@
+monetdb4-server (4.38.3-20100709) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 09 Jul 2010 11:44:10 +0200
+
 monetdb4-server (4.38.1-20100630) unstable; urgency=low
 
   * Rebuilt.
