--- a/testing/debian/changelog
+++ b/testing/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-testing (1.38.3-20100709) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 09 Jul 2010 11:44:11 +0200
+
 monetdb-testing (1.38.1-20100630) unstable; urgency=low
 
   * Rebuilt.
