--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -1,3 +1,9 @@
+monetdb5-server (5.20.3-20100712) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 12 Jul 2010 12:00:27 +0200
+
 monetdb5-server (5.20.3-20100709) unstable; urgency=low
 
   * Rebuilt.
