--- a/geom/debian/changelog
+++ b/geom/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-geom (0.18.3-20100712) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 12 Jul 2010 12:00:28 +0200
+
 monetdb-geom (0.18.3-20100709) unstable; urgency=low
 
   * Rebuilt.
