Added "no_mitosis_pipe" SQL optimizer pipeline. The no_mitosis pipe line is (and should be kept!) identical to the default pipeline, except that optimizer mitosis is omitted.  It is use mainly to make some tests work deterministically, and to check / debug whether "unexpected" problems are related to mitosis (and/or mergetable).

--- a/MonetDB5/ChangeLog
+++ b/MonetDB5/ChangeLog
@@ -1,3 +1,7 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Mon Jul 12 2010 Stefan Manegold <Stefan.Manegold@cwi.nl>
+- Added "no_mitosis_pipe" SQL optimizer pipeline that is (and should be kept!)
+  identical to the default pipeline, except that optimizer mitosis is omitted.
+
