--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -1,3 +1,9 @@
+monetdb (1.38.3-20100713) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 13 Jul 2010 11:17:24 +0200
+
 monetdb (1.38.3-20100712) unstable; urgency=low
 
   * Rebuilt.
