--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -1,3 +1,16 @@
+monetdb5-server (5.20.3-20100713) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 13 Jul 2010 11:17:24 +0200
+
+monetdb5-server (5.20.3-20100713) unstable; urgency=low
+
+  * Fixed bug 2597: This bug manifested itself in rank queries in SQL but
+was a bug in the mergetable optimizer.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 12 Jul 2010 11:17:24 +0200
+
 monetdb5-server (5.20.3-20100712) unstable; urgency=low
 
   * Rebuilt.
