--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -1,3 +1,6 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Jul 15 2010 Fabian Groffen <fabian@cwi.nl>
+- In SQL (rendering) mode, mclient now returns timings for SELECT and UPDATE/INSERT/DELETE queries next to the number of tuples returned or rows affected.
+
