--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -2,6 +2,10 @@
 # This file is updated with Maddlog
 
 * Wed Aug 18 2010 Fabian Groffen <fabian@cwi.nl>
+- Allow users to specify their own default formatter (using format=), or
+  their default formatting width (using width=) in their .monetdb file.
+  Setting the latter option is mostly useful when using the sql
+  formatter, such that truncation can be disabled by setting width=-1.
 - Rendering of mclient's tabular mode (when using SQL) has been changed
   considerably to get improved output.  Most importantly it now omits
   parts of field values or even full columns when the used terminal width
