--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -49,23 +49,23 @@ monetdb (1.38.1-20100618) unstable; urgency=low
 monetdb (1.38.1-20100618) unstable; urgency=low
 
   * Made compilation of "testing" (and "java") independent of MonetDB.
-    This is mainly for Windows, but also on other systems, "testing" can now be
-    built independently of (and hence before) "MonetDB".
-    Files that mimic configure functionality on Windows were moved from
-    "MonetDB" to "buildtools"; hence, this affects all packages on Windows,
-    requiring a complete rebuild from scratch on Windows.
-    getopt() support in testing has changed; hence, (most probably) requiring a
-    rebuild from scratch of testing on other systems.
+    This is mainly for Windows, but also on other systems, "testing"
+    can now be built independently of (and hence before) "MonetDB".
+    Files that mimic configure functionality on Windows were moved
+    from "MonetDB" to "buildtools"; hence, this affects all packages
+    on Windows, requiring a complete rebuild from scratch on Windows.
+    getopt() support in testing has changed; hence, (most probably)
+    requiring a rebuild from scratch of testing on other systems.
 
  -- Stefan Manegold <manegold@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
 monetdb (1.38.1-20100618) unstable; urgency=low
 
-  * Implemented build directory support for Windows,
-    i.e., like on Unix/Linux also on Windows we can now build in a separate
-    build directory as alternative to ...<package>NT, and thus keep the
-    latter clean from files generated during the build.
-    On Windows, the build directory must be a sibling of ...<package>NT .
+  * Implemented build directory support for Windows, i.e., like on
+    Unix/Linux also on Windows we can now build in a separate build
+    directory as alternative to ...<package>NT, and thus keep the
+    latter clean from files generated during the build.  On Windows,
+    the build directory must be a sibling of ...<package>NT .
 
  -- Stefan Manegold <manegold@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
@@ -77,22 +77,23 @@ monetdb (1.36.5-20100420) unstable; urgency=low
 
 monetdb (1.36.5-20100420) unstable; urgency=low
 
-  * Fixed a bug that could cause a crash when string BATs are combined.
-    (SF bug 2947763.)
+  * Fixed a bug that could cause a crash when string BATs are
+    combined.  (SF bug 2947763.)
 
  -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 15 Apr 2010 10:46:13 +0200
 
 monetdb (1.36.5-20100420) unstable; urgency=low
 
-  * Fixed a potential file leak: under certain conditions, files in the
-    database might not get deleted when they should (they would be
+  * Fixed a potential file leak: under certain conditions, files in
+    the database might not get deleted when they should (they would be
     deleted when the server restarts).
 
  -- Niels Nes <niels@cwi.nl>  Sun, 11 Apr 2010 10:46:13 +0200
 
 monetdb (1.36.5-20100420) unstable; urgency=low
 
-  * Fix regression introduced in Feb2010-SP1 causing UDP connections to malfunction, in particular affecting the stethoscope tool.
+  * Fix regression introduced in Feb2010-SP1 causing UDP connections
+    to malfunction, in particular affecting the stethoscope tool.
 
  -- Fabian Groffen <fabian@cwi.nl>  Mon, 29 Mar 2010 10:46:13 +0200
 
@@ -104,7 +105,8 @@ monetdb (1.36.3-20100322) unstable; urgency=low
 
 monetdb (1.36.3-20100322) unstable; urgency=low
 
-  * Fixed bug in UDP stream creation causing UDP connections to already
+  * Fixed bug in UDP stream creation causing UDP connections to
+    already
 
  -- Fabian Groffen <fabian@cwi.nl>  Mon, 01 Mar 2010 11:35:46 +0100
 
@@ -117,18 +119,18 @@ monetdb (1.36.1-20100224) unstable; urgency=low
 monetdb (1.36.1-20100223) unstable; urgency=low
 
   * Various concurrency bugs were fixed.
-  * Various changes were made to run better on systems that don't have enough
-    memory to keep everything in core that was touched during query processing.
-    This is done by having the higher layers giving hints to the database
-    kernel about future use, and the database kernel giving hings to the
-    operating system kernel about how (virtual) memory is going to be used.
+  * Various changes were made to run better on systems that don't have
+    enough memory to keep everything in core that was touched during
+    query processing.  This is done by having the higher layers giving
+    hints to the database kernel about future use, and the database
+    kernel giving hings to the operating system kernel about how
+    (virtual) memory is going to be used.
 
  -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 22 Feb 2010 15:14:34 +0100
 
 monetdb (1.36.1-20100223) unstable; urgency=low
 
-  * Fixed bug in mergejoin implementation.
-    This fixes bug  #2952191.
+  * Fixed bug in mergejoin implementation.  This fixes bug #2952191.
 
  -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Thu, 18 Feb 2010 15:14:34 +0100
 
@@ -141,34 +143,34 @@ monetdb (1.36.1-20100223) unstable; urgency=low
 
 monetdb (1.36.1-20100223) unstable; urgency=low
 
-  * Fix compilation issue when configured with --with-curl.
-    This fixes bug #2924999.
+  * Fix compilation issue when configured with --with-curl.  This
+    fixes bug #2924999.
 
  -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 21 Jan 2010 15:14:34 +0100
 
 monetdb (1.36.1-20100223) unstable; urgency=low
 
-  * Added implementation of MT_getrss() for Solaris.  This yields in the
-    kernel knowing about its (approximate) memory usage to try and help
-    the operating system to free that memory that is best to free, instead
-    of a random page, e.g. the work of the vmtrim thread.
+  * Added implementation of MT_getrss() for Solaris.  This yields in
+    the kernel knowing about its (approximate) memory usage to try and
+    help the operating system to free that memory that is best to
+    free, instead of a random page, e.g. the work of the vmtrim
+    thread.
 
  -- Fabian Groffen <fabian@cwi.nl>  Thu, 21 Jan 2010 15:14:34 +0100
 
 monetdb (1.36.1-20100223) unstable; urgency=low
 
-  * Implemented a "fast" string BAT append:
-    Under certain conditions, instead of inserting values one-by-one,
-    we now concatenate the string heap wholesale and just manipulate
-    the offsets.
-    This works both for BATins and BATappend.
+  * Implemented a "fast" string BAT append: Under certain conditions,
+    instead of inserting values one-by-one, we now concatenate the
+    string heap wholesale and just manipulate the offsets.  This works
+    both for BATins and BATappend.
 
  -- Sjoerd Mullender <sjoerd@cwi.nl>  Wed, 20 Jan 2010 15:14:34 +0100
 
 monetdb (1.36.1-20100223) unstable; urgency=low
 
-  * Changed the string heap implementation to also contain the hashes of
-    strings.
+  * Changed the string heap implementation to also contain the hashes
+    of strings.
   * Changed the implementation of the string offset columns to be
     dynamically sized.
 
