--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -6,8 +6,8 @@ monetdb5-server (5.20.3-20100713) unstable; urgency=low
 
 monetdb5-server (5.20.3-20100713) unstable; urgency=low
 
-  * Fixed bug 2597: This bug manifested itself in rank queries in SQL but
-was a bug in the mergetable optimizer.
+  * Fixed bug 2597: This bug manifested itself in rank queries in SQL
+    but was a bug in the mergetable optimizer.
 
  -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 12 Jul 2010 11:17:24 +0200
 
@@ -33,11 +33,13 @@ monetdb5-server (5.20.3-20100706) unstable; urgency=low
 monetdb5-server (5.20.3-20100706) unstable; urgency=low
 
   * various performance fixes in grouping and grouped aggregation code
-    (MonetDB5/src/modules/kernel/group.mx, MonetDB5/src/modules/kernel/aggr*.mx)
-    to reduce the execution time the following query that mimics a two-column
-    primary key check over the ~5 billion tuple "neighbors" table of the
-    Skyserver database from 26 hours to 1.5 hours (on a 64 GB machine):
-    SELECT count(c), sum(c), min(c), max(c) FROM (SELECT count(*) AS c FROM "neighbors" GROUP BY "objID","NeighborObjID") AS t;
+    (MonetDB5/src/modules/kernel/group.mx,
+    MonetDB5/src/modules/kernel/aggr*.mx) to reduce the execution time
+    the following query that mimics a two-column primary key check
+    over the ~5 billion tuple "neighbors" table of the Skyserver
+    database from 26 hours to 1.5 hours (on a 64 GB machine): SELECT
+    count(c), sum(c), min(c), max(c) FROM (SELECT count(*) AS c FROM
+    "neighbors" GROUP BY "objID","NeighborObjID") AS t;
 
  -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Wed, 30 Jun 2010 14:06:18 +0200
 
@@ -91,9 +93,9 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * fixed BUG #2994521 "mat.slice unable to cope with only empty BAT arguments"
-    https://sourceforge.net/tracker/index.php?func=detail&aid=2994521&group_id=56967&atid=482468
-    by making MATpackSliceInternal() handle empty input BATs correctly
+  * fixed BUG #2994521 "mat.slice unable to cope with only empty BAT
+    arguments" by making MATpackSliceInternal() handle empty input
+    BATs correctly
 
  -- Stefan Manegold <manegold@cwi.nl>  Sat, 1 May 2010 10:58:37 +0200
 
@@ -106,41 +108,43 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
   * Made compilation of "testing" (and "java") independent of MonetDB.
-    This is mainly for Windows, but also on other systems, "testing" can now be
-    built independently of (and hence before) "MonetDB".
-    Files that mimic configure functionality on Windows were moved from
-    "MonetDB" to "buildtools"; hence, this affects all packages on Windows,
-    requiring a complete rebuild from scratch on Windows.
-    getopt() support in testing has changed; hence, (most probably) requiring a
-    rebuild from scratch of testing on other systems.
+    This is mainly for Windows, but also on other systems, "testing"
+    can now be built independently of (and hence before) "MonetDB".
+    Files that mimic configure functionality on Windows were moved
+    from "MonetDB" to "buildtools"; hence, this affects all packages
+    on Windows, requiring a complete rebuild from scratch on Windows.
+    getopt() support in testing has changed; hence, (most probably)
+    requiring a rebuild from scratch of testing on other systems.
 
  -- Stefan Manegold <manegold@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * Implemented build directory support for Windows,
-    i.e., like on Unix/Linux also on Windows we can now build in a separate
-    build directory as alternative to ...<package>NT, and thus keep the
-    latter clean from files generated during the build.
-    On Windows, the build directory must be a sibling of ...<package>NT .
+  * Implemented build directory support for Windows, i.e., like on
+    Unix/Linux also on Windows we can now build in a separate build
+    directory as alternative to ...<package>NT, and thus keep the
+    latter clean from files generated during the build.  On Windows,
+    the build directory must be a sibling of ...<package>NT .
 
  -- Stefan Manegold <manegold@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * The MAL debugger list command has been extended with
-    an optional hash '#', which produces line numbers for
-    each of reference and analysis of variable span.
-  * The dataflow scheduler has been revamped to allow for
-    more parallelism to be exploited.
-  * The garbage collection administration has been changed. Every variable record
-    now comes with an end-of-life field (eolife), which denotes the instruction whereafter
-    the BAT variable reference counter can be decremented. The garbage collector is
-    never called automagically on MAL functions, because there may be other
-    pressing needs to retain them. This means that MAL functions defined and
-    used in the context of SQL, and which are not inlined, may cause a leakage.
-    The garbage collection has become part of each interpreter step.
-    The new approach makes the SQL/MAL plans half the size as before.
+  * The MAL debugger list command has been extended with an optional
+    hash '#', which produces line numbers for each of reference and
+    analysis of variable span.
+  * The dataflow scheduler has been revamped to allow for more
+    parallelism to be exploited.
+  * The garbage collection administration has been changed. Every
+    variable record now comes with an end-of-life field (eolife),
+    which denotes the instruction whereafter the BAT variable
+    reference counter can be decremented. The garbage collector is
+    never called automagically on MAL functions, because there may be
+    other pressing needs to retain them. This means that MAL functions
+    defined and used in the context of SQL, and which are not inlined,
+    may cause a leakage.  The garbage collection has become part of
+    each interpreter step.  The new approach makes the SQL/MAL plans
+    half the size as before.
 
  -- Martin Kersten <martin.kersten@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
@@ -153,9 +157,9 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * Added the compression optimizer as an example of how to gain access to
-    foreign file formats deep down in the kernel and transfer them just
-    in time into a temporary BAT.
+  * Added the compression optimizer as an example of how to gain
+    access to foreign file formats deep down in the kernel and
+    transfer them just in time into a temporary BAT.
 
  -- Martin Kersten <mk@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
@@ -168,26 +172,25 @@ monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * Fixed cleaning the user module context upon session end.
-    Fixes bug #2956664
+  * Fixed cleaning the user module context upon session end.  Fixes
+    bug #2956664
 
  -- Martin Kersten <mk@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * The config variable mapi_usock can now be used to instruct the server
-    to listen for connections on a local UNIX domain socket on UNIX-like
-    systems.
+  * The config variable mapi_usock can now be used to instruct the
+    server to listen for connections on a local UNIX domain socket on
+    UNIX-like systems.
 
  -- Fabian Groffen <fabian@cwi.nl>  Tue, 20 Apr 2010 10:58:37 +0200
 
 monetdb5-server (5.20.1-20100618) unstable; urgency=low
 
-  * The MAL interpreter has been extended with an operation
-    admission policy to control the memory claims of all
-    concurrent running interpreters. Instructions are hold
-    up unto there is sufficient resource or the query plan
-    can not avoid its execution anymore.
+  * The MAL interpreter has been extended with an operation admission
+    policy to control the memory claims of all concurrent running
+    interpreters. Instructions are hold up unto there is sufficient
+    resource or the query plan can not avoid its execution anymore.
   * The join path optimizer has been extended with searching for
     join*, semijoin*, and leftjoin* paths. Furthermore, it avoids
     duplicate work by factoring out all common simple join paths.
@@ -221,33 +224,41 @@ monetdb5-server (5.18.1-20100224) unstable; urgency=low
 
 monetdb5-server (5.18.1-20100223) unstable; urgency=low
 
-  * The MonetDB 5 code base underwent a series of small/medium changes:
+  * The MonetDB 5 code base underwent a series of small/medium
+    changes:
     - Solving name conflicts with external libraries in mal_box.
     - Dependency graph generation in MAL debugger fixed.
-    - Code hardening against out of memory errors and based on Coverity checks.
-    - Recycler improved to deal with SQL plans from different sessions.
-    - Profiler extended to report the argument types, user, and thread id.
-    - MAL interpreter reports an event before and after the instruction.
+    - Code hardening against out of memory errors and based on
+      Coverity checks.
+    - Recycler improved to deal with SQL plans from different
+      sessions.
+    - Profiler extended to report the argument types, user, and thread
+      id.
+    - MAL interpreter reports an event before and after the
+      instruction.
     - Dataflow also allowed for updates on temporary BATs.
     - Reorder optimizer better respects the dataflow.
-    - All update instructions return their target to mark the dataflow.
+    - All update instructions return their target to mark the
+      dataflow.
     - Clean up of (bat)calc module.
     - Packing pieces together simplified and speed up.
-  * The MAL interpreter has been extended with an operator admission scheme, which is
-    active during parallel execution. It blocks threads if the total amount of memory
-    needed for the operator can not be claimed. Only if there is one operation
-    left to execute, it won't block. The admission level is controlled by
-    a threshold, which is set to 90% of the physical memory.
+  * The MAL interpreter has been extended with an operator admission
+    scheme, which is active during parallel execution. It blocks
+    threads if the total amount of memory needed for the operator can
+    not be claimed. Only if there is one operation left to execute, it
+    won't block. The admission level is controlled by a threshold,
+    which is set to 90% of the physical memory.
 
  -- Martin Kersten <mk@(none)>  Sun, 21 Feb 2010 15:15:01 +0100
 
 monetdb5-server (5.18.1-20100223) unstable; urgency=low
 
   * The ilike[u]select operations has been included in the repertoire
-    recognized by the mergetable optimizer for push through of selections.
-  * The joinpath optimizer has been extended with recognition of the leftjoin.
-    This way, series of leftjoin operations can be optimized by looking at
-    the smallest starting point.
+    recognized by the mergetable optimizer for push through of
+    selections.
+  * The joinpath optimizer has been extended with recognition of the
+    leftjoin.  This way, series of leftjoin operations can be
+    optimized by looking at the smallest starting point.
   * Introduced a dictionary encoding option to the optimizer pipeline.
     Encoding is initiated with a SQL call compress(tablename).
 
@@ -255,9 +266,10 @@ monetdb5-server (5.18.1-20100223) unstable; urgency=low
 
 monetdb5-server (5.18.1-20100223) unstable; urgency=low
 
-  * Removed the ability to redirect to other running databases in the same
-    dbfarm.  This functionality has been taken over completely by
-    merovingian, and only results in confusement these days, bug #2891191.
+  * Removed the ability to redirect to other running databases in the
+    same dbfarm.  This functionality has been taken over completely by
+    merovingian, and only results in confusement these days, bug
+    #2891191.
   * Added --enable-console configure argument, defaulting to 'yes' for
     now.  Disabling the server console increases security by avoiding
     local access exploits.  This is not the default since our Testing
