--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -1,3 +1,64 @@
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * A bug was fixed where on 32 bit systems (or 64 bit systems using 32 bit
+    OIDs), values where sometimes written as 32 bits but read as 64 bits.
+    This fixes bugs 2644 and 2654.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 20 Aug 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * If extensions such as SQL and GEOM are properly installed, they are
+    loaded automatically when mserver5 starts.  This fixes bug 2522.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 19 Aug 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Fixed bug 2557. There was a bug in the mergetable optimizer which was
+    triggered by multi column (at least 32 columns).
+
+ -- Niels Nes <niels@cwi.nl>  Fri, 30 Jul 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Added missing multiplex version of MAL str.stringlength().
+    This improves performance of SQL length().
+
+ -- Martin Kersten <mk@cwi.nl>  Wed, 28 Jul 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Protect dataflow against multi-assignments.
+    This fixes bugs 2626 & 2614.
+
+ -- Martin Kersten <mk@cwi.nl>  Tue, 27 Jul 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Slight change to Fedora, Debian, Ubuntu installers: the database
+    directory now has the group setuid bit set so that new databases
+    inherit the group ownership (monetdb).
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 22 Jul 2010 10:13:12 +0200
+
+monetdb5-server (5.20.5-20100823) unstable; urgency=low
+
+  * Restored genuine original mitosis logic by disabling
+    incorrect octopus dominance (even when octopus was not
+    enabled); basically a selective back-port of changesets
+    http://dev.monetdb.org/hg/MonetDB/rev/2a358751a4b6
+    http://dev.monetdb.org/hg/MonetDB/rev/692eff15bea0 from the default
+    branch. This fixes bug 2596.
+
+ -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Thu, 15 Jul 2010 10:13:12 +0200
+
 monetdb5-server (5.20.3-20100713) unstable; urgency=low
 
   * Rebuilt.
