--- a/clients/debian/changelog
+++ b/clients/debian/changelog
@@ -1,3 +1,46 @@
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:13 +0200
+
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * mclient now complains about NULL bytes in the input when in interactive
+    mode.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 19 Aug 2010 10:13:12 +0200
+
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * Slight rendering improvements to mclient's tabular output when
+    rendering results larger than the available screen width, headers
+    were previously unnecessarily squeezed.
+  * Fix bug #2650, a too small buffer caused the active database as
+    reported by mclient's welcome message to be truncated
+
+ -- Fabian Groffen <fabian@cwi.nl>  Fri, 13 Aug 2010 10:13:12 +0200
+
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * Add --version option to mclient.
+
+ -- Fabian Groffen <fabian@cwi.nl>  Wed, 21 Jul 2010 10:13:12 +0200
+
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * In case of an incomplete line from the server, add a newline.
+    This fixes bug 2619.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 20 Jul 2010 10:13:12 +0200
+
+monetdb-client (1.38.5-20100823) unstable; urgency=low
+
+  * Avoid using SQLROWSETSIZE and SQLROWOFFSET.
+    This fixes bug 2558.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 19 Jul 2010 10:13:12 +0200
+
 monetdb-client (1.38.3-20100713) unstable; urgency=low
 
   * Rebuilt.
