--- a/geom/debian/changelog
+++ b/geom/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-geom (0.18.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:13 +0200
+
 monetdb-geom (0.18.3-20100713) unstable; urgency=low
 
   * Rebuilt.
