--- a/pathfinder/debian/changelog
+++ b/pathfinder/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-xquery (0.38.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:14 +0200
+
 monetdb-xquery (0.38.3-20100713) unstable; urgency=low
 
   * Rebuilt.
