--- a/testing/debian/changelog
+++ b/testing/debian/changelog
@@ -1,3 +1,15 @@
+monetdb-testing (1.38.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:18 +0200
+
+monetdb-testing (1.38.5-20100823) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 23 Aug 2010 10:13:14 +0200
+
 monetdb-testing (1.38.3-20100713) unstable; urgency=low
 
   * Rebuilt.
