--- a/testing/debian/changelog
+++ b/testing/debian/changelog
@@ -1,3 +1,15 @@
+monetdb-testing (1.38.5-20100824) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 24 Aug 2010 09:30:21 +0200
+
+monetdb-testing (1.38.5-20100824) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 24 Aug 2010 09:30:20 +0200
+
 monetdb-testing (1.38.5-20100823) unstable; urgency=low
 
   * Rebuilt.
