--- a/pathfinder/debian/changelog
+++ b/pathfinder/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-xquery (0.38.5-20100824) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 24 Aug 2010 09:30:19 +0200
+
 monetdb-xquery (0.38.5-20100823) unstable; urgency=low
 
   * Rebuilt.
