--- a/sql/debian/changelog
+++ b/sql/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-sql (2.38.5-20100824) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 24 Aug 2010 09:30:20 +0200
+
 monetdb-sql (2.38.5-20100823) unstable; urgency=low
 
   * Rebuilt.
