Print a header also when there are no tuples in a resultset. Decomplicate code a bit. Require the server to send resultsets with the same amount of columns for all tuples. Base column widths solely on the header names when there are no tuples that can influence the width of a column.

--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Aug 26 2010 Fabian Groffen <fabian@cwi.nl>
+-   Empty resultsets now show a header in mclient using SQL mode.
+
 * Wed Aug 18 2010 Fabian Groffen <fabian@cwi.nl>
 - Allow users to specify their own default formatter (using format=), or
   their default formatting width (using width=) in their .monetdb file.
