--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -143,7 +143,7 @@ monetdb (1.36.1-20100223) unstable; urgency=low
     enough memory to keep everything in core that was touched during
     query processing.  This is done by having the higher layers giving
     hints to the database kernel about future use, and the database
-    kernel giving hings to the operating system kernel about how
+    kernel giving hints to the operating system kernel about how
     (virtual) memory is going to be used.
 
  -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 22 Feb 2010 15:14:34 +0100
