--- a/sql/src/backends/monet5/merovingian/ChangeLog
+++ b/sql/src/backends/monet5/merovingian/ChangeLog
@@ -1,3 +1,9 @@
 # ChangeLog file for sql/src/backends/monet5/merovingian
 # This file is updated with mchangelog
 
+* Mon Sep 20 2010 Fabian Groffen <fabian@cwi.nl>
+- merovingian has been renamed into monetdbd.  Internally, monetdbd keeps
+  referring to merovingian for e.g. settings and logfiles.  Merovingian
+  has been renamed to make the process more recognisable as part of the
+  MonetDB suite.
+
