--- a/MonetDB5/conf/monetdb5.conf.5
+++ b/MonetDB5/conf/monetdb5.conf.5
@@ -90,6 +90,17 @@ integer, which value can be (a combination of):
                              for debugging (GDK developers, only)
   134217728 = OPTMASK      = trace the actions, decisions and
                              effects of MAL optimizers
+  536870912 = FORCEMITOMASK = forcefully activate mitosis even on
+                              small tables, i.e., split small tables
+                              in as many (tiny) pieces as there are
+                              cores (threads) available;
+                              this allows us to test mitosis
+                              functionality without requiring large
+                              data sets (--- at the expense of a
+                              potentially significant interpretation
+                              overhead for unnecessary large plans);
+                              used only for development & testing;
+                              set automatically by Mtest.py
 .EE
 Note that mserver5 recognizes a series of command line options as well:
 .EX
@@ -103,6 +114,7 @@ Note that mserver5 recognizes a series of command line options as well:
   --xproperties   (XPROPMASK )
   --performance   (JOINPROPMASK | DEADBEEFMASK)
   --optimizers    (OPTMASK)
+  --forcemito     (FORCEMITOMASK)
 .EE
 Default: 0
 
